@@ -55,6 +55,7 @@ Bug fixes
  * Page links within rich text now respect custom URLs defined on specific page models (Gary Krige, Huub Bouma)
  * Default avatar no longer visible when using a transparent gravatar image (Thijs Kramer)
  * Scrolling within the datetime picker is now usable again for touchpads (Ralph Jacobs)
+ * List-based fields within form builder form submissions are now displayed as comma-separated strings rather than as Python lists (Christine Ho, Matt Westcott)
 
 
 Upgrade considerations
