@@ -43,6 +43,7 @@ Changelog
  * Fix: Page links within rich text now respect custom URLs defined on specific page models (Gary Krige, Huub Bouma)
  * Fix: Default avatar no longer visible when using a transparent gravatar image (Thijs Kramer)
  * Fix: Scrolling within the datetime picker is now usable again for touchpads (Ralph Jacobs)
+ * Fix: List-based fields within form builder form submissions are now displayed as comma-separated strings rather than as Python lists (Christine Ho, Matt Westcott)
 
 
 1.9 (16.02.2017)
